--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -503,3 +503,13 @@ a {
 .page-up:hover {
   opacity: 1;
 }
+
+.demo-avatar {
+  .avatar-list {
+    .za-avatar {
+      margin-top: 16px;
+      margin-right: 16px;
+    }
+  }
+}
+
