chore: temp add

--- a/components/style/component.scss
+++ b/components/style/component.scss
@@ -40,3 +40,4 @@
 @import "../transition/style/index.scss";
 @import "../tree/style/index.scss";
 @import "../upload/style/index.scss";
+@import "../popper/style/index.scss";
