--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -329,6 +329,12 @@ a {
   .za-tag-input-box { width: 200px; }
 }
 
+.demo-popper {
+  .za-popper {
+    margin: 12px;
+  }
+}
+
 .demo-block {
   border: solid 1px #eaeefb;
   border-radius: 4px;
