--- a/components/switch/style/component.scss
+++ b/components/switch/style/component.scss
@@ -1,85 +1,130 @@
-.ui-switch {
+@mixin switch-size(
+  $width, $height, $font-size, $inner-left,
+  $inner-right, $checked-inner-left, $checked-inner-right,
+  $animationName, $loadingScale: 1
+) {
+  min-width: $width;
+  height: $height;
+  line-height: $height - 2px;
+  border-radius: $height - 2px;
+
+  &:after {
+    width: $height - 4px;
+    height: $height - 4px;
+  }
+
+  @include e(inner) {
+    display: block;
+    margin-left: $inner-left;
+    margin-right: $inner-right;
+    color: #fff;
+    font-size: $font-size;
+  }
+
+  @include e(loadingIcon) {
+    transform: scale($loadingScale);
+    animation: $animationName 1s linear infinite;
+  }
+
+  @include m(checked) {
+    @include e(inner) {
+      margin-left: $checked-inner-left;
+      margin-right: $checked-inner-right;
+    }
+  }
+}
+
+@include b(switch) {
   position: relative;
   display: inline-block;
-  width: 44px;
-  height: 22px;
-  line-height: 20px;
   vertical-align: middle;
-  border-radius: 20px;
-  border: 1px solid #ccc;
-  background-color: #ccc;
+  border: 1px solid $--switch-default-color;
+  background-color: $--switch-default-color;
   cursor: pointer;
-  transition: left .3s cubic-bezier(.78, .14, .15, .86);
   user-select: none;
+  transition: all .3s;
+  @include switch-size(
+    $--switch-width, $--switch-height,
+    $--switch-font-size, $--switch-inner-left,$--switch-inner-right,
+    $--switch-checked-inner-left, $--switch-checked-inner-right, rotate360
+  );
 
   &:after {
     position: absolute;
-    width: 18px;
-    height: 18px;
     left: 2px;
     top: 1px;
     border-radius: 100%;
     background-color: #fff;
     content: " ";
     cursor: pointer;
-    transition: left .3s cubic-bezier(.78, .14, .15, .86);
+    transition: all .3s cubic-bezier(.78, .14, .15, .86);
   }
 
-  &.checked {
-    border: 1px solid $base-theme-info;
+  @include e(loadingIcon) {
+    position: absolute;
+    top: 4px;
+    left: 5px;
+    z-index: 1;
+    background-color: transparent;
+    font-size: $--switch-loadingIcon-font-size;
+    width: $--switch-loadingIcon-font-size;
+    height: $--switch-loadingIcon-font-size;
+  }
+
+  @include m(checked) {
     background-color: $base-theme-info;
+    border: 1px solid $base-theme-info;
 
     &:after {
-      left: 22px;
+      left: 100%;
+      margin-left: $--switch-checked-margin-left;
+      transform: translateX(-100%);
     }
-
-    .ui-switch-inner {
-      left: 6px;
+    @include e(loadingIcon) {
+      left: 100%;
+      margin-left: -17px;
     }
   }
 
-  &.disabled {
+  /* Switch sizes */
+  @include m(sm) {
+    @include switch-size(
+      $--switch-width-sm, $--switch-height-sm,
+      $--switch-font-size-sm, $--switch-sm-inner-left,$--switch-sm-inner-right,
+      $--switch-sm-checked-inner-left, $--switch-sm-checked-inner-right,
+      Animate-switch-sm-rotate360, $--switch-sm-loadingIcon-scale
+    );
+    @include e(loadingIcon) {
+      top: 1px;
+      left: 2px;
+    }
+    @include m(checked) {
+      @include e(loadingIcon) {
+        left: 100%;
+        margin-left: -14px;
+      }
+    }
+  }
+
+  @include m(disabled) {
     cursor: not-allowed;
-    opacity: 0.5;
+    opacity: $--switch-disabled-opacity;
 
     &:after {
       cursor: not-allowed;
     }
   }
 
-  &.size-sm {
-    height: 14px;
-    line-height: 12px;
-    width: 28px;
-
-    &:after {
-      width: 12px;
-      height: 12px;
-      top: 0;
-      left: 0;
+  @keyframes Animate-switch-sm-rotate360 {
+    0% {
+      transform-origin: 50% 50%;
+      transform: rotate(0deg) scale(0.66667);
     }
 
-    &.checked {
-      &:after {
-        left: 14px;
-      }
-
-      .ui-switch-inner {
-        left: 3px;
-      }
-    }
-
-    .ui-switch-inner {
-      left: 13px;
-      font-size: 10px;
+    100% {
+      transform-origin: 50% 50%;
+      transform: rotate(360deg) scale(0.66667);
     }
   }
-
-  .ui-switch-inner {
-    position: absolute;
-    left: 24px;
-    color: #fff;
-    font-size: 12px;
-  }
-
 }
+
