fix: fix some error in Input component. 修复了一些输入的时候的问题 添加了Input组件的CSS BEM形式 修复一些ESLint的问题

--- a/components/input/style/component.scss
+++ b/components/input/style/component.scss
@@ -22,7 +22,7 @@
     border .2s cubic-bezier(0.645, 0.045, 0.355, 1),
     background .2s cubic-bezier(0.645, 0.045, 0.355, 1);
 
-  &.disabled,
+  &.ui-input--disabled,
   &:disabled {
     cursor: not-allowed;
     background-color: #f3f5f7;
@@ -68,7 +68,7 @@ textarea {
       border-color: $base-theme-info;
     }
 
-    &.active {
+    &.ui-input--active {
       border-color: $base-theme-info;
     }
   }
@@ -87,7 +87,7 @@ textarea {
     border-color: $base-theme-info;
   }
 
-  &.active {
+  &.ui-input--active {
     border-color: $base-theme-info;
   }
 
