--- a/components/number-input/style/component.scss
+++ b/components/number-input/style/component.scss
@@ -11,9 +11,8 @@
     border: 1px solid #ddd;
   }
 
-  
   .ui-number-input-count-disable {
     background: #f3f5f7;
-    cursor: not-allowed
+    cursor: not-allowed;
   }
 }
