--- a/components/popover/style/component.scss
+++ b/components/popover/style/component.scss
@@ -62,7 +62,7 @@
     position: absolute;
     width: 5px;
     height: 5px;
-    border-width: 0px;
+    border-width: 0;
     border-style: solid;
     border-color: #ccc;
     background: #fff;
