--- a/components/step/style/component.scss
+++ b/components/step/style/component.scss
@@ -46,8 +46,7 @@
     background-color: #fff;
     font-size: 14px;
     color: #ccc;
-    transition: background-color .3s ease,
-      border-color .3s ease;
+    transition: background-color .3s ease, border-color .3s ease;
 
     span {
       line-height: 1;
