--- a/components/style/animations/bounce.scss
+++ b/components/style/animations/bounce.scss
@@ -1,6 +1,11 @@
 @keyframes bounce-enter {
-  from, 20%, 40%, 60%, 80%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  from,
+  20%,
+  40%,
+  60%,
+  80%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
 
   0% {
@@ -36,7 +41,8 @@
     transform: scale3d(.9, .9, .9);
   }
 
-  50%, 55% {
+  50%,
+  55% {
     opacity: 1;
     transform: scale3d(1.1, 1.1, 1.1);
   }
