chore: update markdown loader

--- a/site/styles/components/App.scss
+++ b/site/styles/components/App.scss
@@ -369,7 +369,7 @@ a {
     position: relative;
     padding: 24px;
 
-    .ui-tag {
+    .za-tag {
       margin-right: 8px;
     }
 
@@ -393,7 +393,7 @@ a {
     }
 
     .icons {
-      .ui-icon {
+      .za-icon {
         font-size: 28px;
       }
     }
