--- a/site/styles/index.scss
+++ b/site/styles/index.scss
@@ -3,6 +3,4 @@
 // @import "./themes/default";
 // @import "~dragon-ui/components/style/components";
 
-@import "./pages/index";
-@import "./base/index";
-@import "./base/prism";
+@import "./mixins/index";
