chore: add pagination variable

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -168,3 +168,7 @@ $--avatar-fontSize-icon-xs: 12px !default;
 
 $--avatar-default-color: #fff !default;
 $--avatar-default-bg-color: #ccc !default;
+
+/* -------------  Pagination  ------------- */
+$--pagination-height-md: 32px !default;
+$--pagination-height-sm: 24px !default;
