--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -1,102 +1,69 @@
-.main-container {
-  .hljs {
-    background-color: transparent;
-  }
+pre {
+  overflow: auto;
+  font-size: 14px;
+  background-color: #f6f8fa;
 
-  .grid-container {
-    overflow-x: auto;
-  }
-
-  pre {
-    padding: 16px;
-    overflow: auto;
+  span {
     font-size: 14px;
-    line-height: 1.5;
-    background-color: #f6f8fa;
-    border-radius: 3px;
   }
+}
 
-  h1,
-  h2,
-  h3 {
-    font-weight: normal;
-    color: #1f2d3d;
-  }
+.hljs {
+  background: transparent;
+}
 
-  h1 {
-    font-size: 28px;
-  }
+h1,
+h2,
+h3 {
+  font-weight: normal;
+  color: #1f2d3d;
+}
 
-  h2 {
-    font-size: 20px;
-    margin-top: 50px;
-  }
+h1 {
+  font-size: 28px;
+}
 
-  h3 {
-    font-size: 16px;
-    margin-top: 50px;
-  }
+h2 {
+  font-size: 20px;
+  margin-top: 20px;
+}
 
-  h4 {
-    font-size: 14px;
-    font-weight: normal;
-    color: #1f2d3d;
-  }
+h3 {
+  font-size: 16px;
+  margin-top: 20px;
+}
 
-  p {
-    color: #666;
-  }
+h4 {
+  font-size: 14px;
+  font-weight: normal;
+  color: #1f2d3d;
+}
 
-  blockquote {
-    margin: 0;
-    padding: 0 20px;
-    color: #6a737d;
-    border-left: 4px solid #dfe2e5;
-  }
+p {
+  color: #666;
+}
 
-  code {
-    background-color: #f1f1f1;
-    padding: 2px 6px;
-    margin: 0 1px;
-    border-radius: 3px;
-  }
+blockquote {
+  margin: 0;
+  padding: 0 20px;
+  color: #6a737d;
+  border-left: 4px solid #dfe2e5;
+}
 
-  table.grid {
-    font-family:
-      "SFMono-Regular",
-      Consolas,
-      "Liberation Mono",
-      Menlo,
-      Courier,
-      monospace;
-    width: 100%;
-    min-width: 600px;
-    font-size: 14px;
-    margin-bottom: 45px;
+code {
+  background-color: #f1f1f1;
+  padding: 2px 6px;
+  margin: 0 1px;
+  border-radius: 3px;
+}
 
-    strong {
-      font-weight: normal;
-    }
+.markdown-demo-wrapper {
+  column-count: 2;
+  column-width: 50%;
+}
 
-    th {
-      text-align: left;
-      border-top: 1px solid #eaeefb;
-      background-color: #f9fafc;
-      white-space: nowrap;
-      font-weight: normal;
-      color: #999;
-    }
-
-    td,
-    th {
-      border-bottom: 1px solid #eaeefb;
-      padding: 10px;
-      max-width: 250px;
-    }
-
-    th:first-child,
-    td:first-child {
-      padding-left: 15px;
-    }
-  }
+.markdown-demo-item {
+  //width: 50%;
+  break-inside: avoid;
+  margin-bottom: 22px;
 }
