--- a/components/message/style/index.scss
+++ b/components/message/style/index.scss
@@ -1,3 +1,78 @@
 @import '../../style/themes/variable';
 @import "../../style/core/mixins/index";
-@import './component';
+
+@include b(message) {
+  position: fixed;
+  width: 100%;
+  top: 16px;
+  left: 0;
+  z-index: 1000;
+  pointer-events: none;
+  transition: opacity 0.3s, transform .3s, right .3s, top 0.4s;
+  animation-duration: 0.3s;
+
+  @include e(content) {
+    text-align: center;
+
+    &.has-icon {
+      margin-left: 55px;
+    }
+  }
+
+  @include e(custom-content) {
+    display: inline-block;
+    padding: 10px 16px;
+    pointer-events: all;
+    font-size: var(--font-size-md);
+    color: #8391a5;
+    background: var(--color-white);
+    box-shadow: var(--box-shadow-dark);
+    border-radius: var(--radius-md);
+  }
+
+  @include e(icon) {
+    position: static !important;
+    top: -2px;
+    transform: translate(0, 0);
+    margin-right: 8px;
+    vertical-align: middle;
+    font-size: var(--font-size-lg);
+
+    &.theme-loading {
+      animation: rotate360 1s linear infinite;
+      font-size: var(--font-size-md);
+    }
+  }
+
+  &.message-in {
+    animation-name: message-in;
+  }
+
+  &.message-out {
+    animation-name: message-out;
+  }
+}
+
+@keyframes message-in {
+  from {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes message-out {
+  0% {
+    opacity: 1;
+    max-height: 150px;
+  }
+
+  100% {
+    opacity: 0;
+    max-height: 0;
+  }
+}
+
