--- a/site/components/App/style.scss
+++ b/site/components/App/style.scss
@@ -237,12 +237,12 @@ img {
   }
 }
 
-.za-button:not(.za-button--block) + .za-button:not(.za-button--block) {
+.zw-button:not(.zw-button--block) + .zw-button:not(.zw-button--block) {
   margin-left: 12px;
 }
 
 .demo-transition {
-  .za-row {
+  .zw-row {
     margin-bottom: 20px;
   }
 }
