--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -1,5 +1,4 @@
-.ui-modal {
-  transform: translate3d(0, 0, 0);
+.zw-modal {
   position: fixed;
   left: 0;
   top: 0;
@@ -15,53 +14,49 @@
   will-change: opacity;
 
   &.radius {
-    .ui-modal-dialog {
+    .zw-modal--dialog {
       border-radius: $base-modal-radius;
     }
   }
 
   &.round {
-    .ui-modal-dialog {
+    .zw-modal--dialog {
       border-radius: $base-modal-round;
     }
   }
 
-  > .ui-modal-wrapper {
-    width: 100%;
-    margin: auto 0;
+  > .zw-modal--dialog {
+    position: relative;
+    margin: 60px auto;
+    background: #fff;
+    box-shadow: 0 7px 21px rgba(0, 0, 0, .2);
+    overflow: hidden;
+    z-index: $base-zindex-modal + 1;
+    will-change: transform;
 
-    > .ui-modal-dialog {
-      position: relative;
-      margin: 60px auto;
-      background: #fff;
-      box-shadow: 0 7px 21px rgba(0, 0, 0, .2);
-      overflow: hidden;
-      z-index: $base-zindex-modal + 1;
-      will-change: transform;
-
-      &:focus {
-        outline: none;
-      }
+    &:focus {
+      outline: none;
     }
   }
+
   // fix popover-content position when using in Modal
-  .ui-popover-content {
+  .zw-popover-content {
     position: absolute !important;
   }
 }
 
-.ui-modal-header {
+.zw-modal-header {
   position: relative;
   height: 50px;
   border-bottom: 1px solid #e9e9e9;
   padding: 0 20px;
 
-  .ui-modal-title {
+  .zw-modal-title {
     font-size: 16px;
     line-height: 50px;
   }
 
-  .ui-modal-close {
+  .zw-modal-close {
     position: absolute;
     top: 0;
     right: 15px;
@@ -78,24 +73,24 @@
   }
 }
 
-.ui-modal-body {
+.zw-modal-body {
   padding: 20px;
   // TODO
-  // .ui-popover-content {
+  // .zw-popover-content {
   //   position: absolute !important;
   // }
 }
 
-.ui-modal-footer {
+.zw-modal-footer {
   border-top: 1px solid #e9e9e9;
   padding: 10px 18px;
   text-align: right;
 
-  button + button {
+  button+button {
     margin-left: 10px;
   }
 }
 
-.ui-modal-body-overflow {
+.zw-modal-body-overflow {
   overflow-y: hidden;
 }
